# Neural-Operator-TL

./: .gitignore  README.md  main.py  pyproject.toml
data/: 2024-08-19_16-36-39_transmission_loss_dataset.csv  com.csv
notl/: __init__.py  encoded_fno.py  load_multirun.py  rff_fno.py
scripts/hyperparameters/: README.md  run.py
scripts/hyperparameters/conf/: config.yaml
scripts/hyperparameters/conf/operator/: deep_cat_operator.yaml  deep_neural_operator.yaml  deep_o_net.yaml  encoded_fourier_neural_operator.yaml
scripts/hyperparameters/outputs/2024-08-19/18-00-12/.hydra/: hydra.yaml
scripts/hyperparameters/outputs/2024-08-19/18-05-28/.hydra/: config.yaml  hydra.yaml
scripts/trial/: evaluate.py  run.py  visualize.py
scripts/trial/conf/: config.yaml
scripts/trial/conf/operator/: deep_cat_operator.yaml  deep_neural_operator.yaml  deep_o_net.yaml  encoded_fourier_neural_operator.yaml
src/hyperparameters/: run.py
src/hyperparameters/conf/operator/: deep_cat_operator.yaml  deep_neural_operator.yaml
src/hyperparameters/outputs/2024-08-19/17-59-59/.hydra/: hydra.yaml
tests/: conftest.py  fixtures.py  test_encoded_fno.py  test_rff_fno.py
