[build-system]
requires = ["poetry-core>=1.2.0", "wheel", ]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "neural-operator-tl"
version = "0.0.0"
description = "A project containing the application of neural operator learning to acousic metamaterials, namely sonic crystals."

authors = ["Jakob Wagner <mail@jakob-wagner.com>", ]
maintainers = ["Jakob Wagner <mail@jakob-wagner.com>", ]

include = ["CHANGELOG.md", "LICENSE", ]
license = "MIT"
readme = "README.md"

packages = [
    { include = "notl" },
]


repository = "https://github.com/JakobEliasWagner/Neural-Operator-TL"

keywords = [
    "python3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.22.0"
jupytext = "^1.14.5"
nbconvert = "^7.7.3"
seaborn = "^0.13.2"
loguru = "^0.7.0"
continuiti = "0.2.0"
hydra-core = "^1.3.2"
nos = {git = "https://github.com/JakobEliasWagner/NeuralOperators.git", rev = "a2ac2d4b73f57631b29d1615e8132a8a7da5ed5c"}
random-fourier-features-pytorch = "^1.0.1"
optuna-dashboard = "^0.16.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
pytest = "^8.3.2"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
ruff = ">=0.5.6"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.apps]
optional = true

[tool.poetry.group.apps.dependencies]
bokeh = "^3.5.2"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "PLR0913",
    "E401", # multiple imports on one line
    "D203",  # no blank line before class
    "D213",  # multi line summary second line
]
line-length = 120
# preview = true
show-fixes = true
src = ["src", ]
target-version = "py310"


[tool.ruff-lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.pylint.similarity]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 5

[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # unused import
    "F403",  # undefined local with import star
    "F405",  #  undefined local with import star usage
]
"tests/*" = [
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "INP001",  # implicit namespace package
    "S101", # use of assert detected
    "D100",  # missing docstring in public module
    "D101",  # undocumented public class
    "D102",  # undocumented public method
    "D103",  # missing docstring in public function
]


[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
